--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Save A Life</a></h1>
+						<h1><a href="../index.html">Save A Life</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
