--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="/templates/hospitals.html">Hospitals</a></li>
-											<li><a href="/templates/firstaid.html">First Aid</a></li>
-											<li><a href="/templates/baymax.html">Baymax</a></li>
+											<li><a href="SaveALifeProject/templates/hospitals.html">Hospitals</a></li>
+											<li><a href="SaveALifeProject/templates/firstaid.html">First Aid</a></li>
+											<li><a href="SaveALifeProject/templates/baymax.html">Baymax</a></li>
 
 										</ul>
 
