--- a/firstaid.html
+++ b/firstaid.html
@@ -13,24 +13,24 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<h1><a href="../index.html">Save A Life</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="hospitals.html">Hospitals</a></li>
-											<li><a href="firstaid.html">First Aid</a></li>
-											<li><a href="baymax.html">Baymax</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+				<header id="header">
+					<h1><a href="index.html">Save A Life</a></h1>
+					<nav id="nav">
+						<ul>
+							<li class="special">
+								<a href="#menu" class="menuToggle"><span>Menu</span></a>
+								<div id="menu">
+									<ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="hospitals.html">Hospitals</a></li>
+										<li><a href="firstaid.html">First Aid</a></li>
+										<li><a href="baymax.html">Baymax</a></li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</nav>
+				</header>
 
 				<!-- Main -->
 					<article id="main">
