--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="../index.html">Save A Life</a></h1>
+						<h1><a href="../index.html">Save A Life <Br></a> <br></h1><br><Br>
 						<nav id="nav">
 							<ul>
+								<br>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
@@ -66,8 +67,13 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Lets Save the World</h2>
-								<p>Lorem Ipsum</p>
+								<h2>Lets Save the World</h2><br><br>
+								<b>Here's the Problem</b>
+								<p> <br><br> Accourding to the National Security Council in 2018, A preventable-injury-related death occurs every 3 minutes in the United States. On average, this means there are 19 deaths and 5,390 medically consulted injuries every hour.  <br> <br><br> Red Cross Poll reports that 5% of adults are confident in their first aid skiils.</p>
+
+								<br><Br><br>
+									<b>Lets Fix That</b> <br><br>
+									<p>The fact is there's a first aid knowledge gap.  It doesnt take a superhero to save the world.  Taking the time to learn what to do in emergency puts you and everyone around you less at risk. <br><br><br><br> Spread the word & Save a Life</p>
 							</header>
 
 						</div>
