--- a/baymax.html
+++ b/baymax.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
 
 	</head>
 	<body>
@@ -35,14 +36,18 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>First Aid</h2>
-							<p>What to Do</p>
+							<h2>Meet Baymax</h2>
+							<p>Your Personal Healthcare Companion</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<section>
-                  Baymax AI
+									<div class = "features">
+                  <p></p>
+
+									<br><br>
+
                   <div class="features">
                     <iframe
     allow="microphone;"
@@ -50,10 +55,16 @@
     height="430"
     src="https://console.dialogflow.com/api-client/demo/embedded/Baymax">
 </iframe>
+<br><br><br>
+
 <br><br>
 </div>
+
+</div> <br><Br>
+<div class="text-muted" style = "text-align:center;" style="color:grey;">
+<p> DISCLAIMED: Baymax is an AI trained to respond with the Red Cross Organization's recommended steps to treat an injury. <br>  <b>If injury is severe,  always contact emergency services</b></p></div>
 								</section>
-<br><br><br>
+
 
 
 
