--- a/baymax.html
+++ b/baymax.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		
+
 
 	</head>
 	<body>
@@ -47,14 +47,27 @@
                   <p></p>
 
 									<br><br>
+									<div class= "features">
+										<script
+    defer="true" type="text/javascript"
+    botId="5d51cc130a5e20fb1d2da60c"
+    class="botcopy-embedder-d7lcfheammjct"
+    id="botcopy-embedder-d7lcfheammjct">
+    var s = document.createElement('script');
+    s.type = 'text/javascript'; s.async = true;
+    s.src = 'https://d7lcfheammjct.cloudfront.net/js/injection.js';
+    var embedder = document.getElementById('botcopy-embedder-d7lcfheammjct');
+    embedder.parentNode.insertBefore(s, embedder);
+</script>l
+								</div>
 
-                  <div class="features">
+                  <!-- <div class="features">
                     <iframe
     allow="microphone;"
     width="350"
     height="430"
     src="https://console.dialogflow.com/api-client/demo/embedded/Baymax">
-</iframe>
+</iframe> -->
 <br><br><br>
 
 <br><br>
