--- a/baymax.html
+++ b/baymax.html
@@ -58,7 +58,7 @@
     s.src = 'https://d7lcfheammjct.cloudfront.net/js/injection.js';
     var embedder = document.getElementById('botcopy-embedder-d7lcfheammjct');
     embedder.parentNode.insertBefore(s, embedder);
-</script>l
+</script>
 								</div>
 
                   <!-- <div class="features">
