--- a/baymax.html
+++ b/baymax.html
@@ -45,8 +45,9 @@
 							<div class="inner">
 
 								<section>
-									<div class = "features">
-                  <p></p>
+									<div class = "features" style ="text-align:center;">
+                  <p>Click Baymax in the corner to begin.<br>
+									Try phrases such as "I cut my foot" or "I burned my arm"</p>
 
 									<br><br>
 									<div class= "features">
