--- a/baymax.html
+++ b/baymax.html
@@ -49,6 +49,13 @@
                   <p>Click Baymax in the corner to begin.<br>
 									Try phrases such as "I cut my foot" or "I burned my arm"</p>
 
+									The goal is to make first aid knowledge accessible by anyone anywhere, Baymax can also be found by through:
+									<br> Phone: 415-570-9351
+									<br>Google Assistant
+									<br>Amazon Alexa
+									
+
+
 									<br><br>
 									<div class= "features">
 										<script
