--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="shortcut icon" type="image/png" href="images/baymaxlogo.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/xlogo.png"/>
 
 		<script>
     function play() {
@@ -39,7 +39,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="firstaid.html">First Aid</a></li>
-											<li><a href="baymax.html">Baymax</a></li>
+											<li><a href="AI.html">Maxwell</a></li>
 
 										</ul>
 
