--- a/firstaid.html
+++ b/firstaid.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/baymaxlogo.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/xlogo.png"/>
 
 
 	</head>
@@ -25,7 +25,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="firstaid.html">First Aid</a></li>
-										<li><a href="baymax.html">Baymax</a></li>
+										<li><a href="AI.html">Maxwell</a></li>
 									</ul>
 								</div>
 							</li>
