--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Save A Life</h2>
-							<p>OPERATION BAYMAX</p>
+							<p>OPERATION Maxwell</p>
 							<audio src="bmv.mp3" id="audio"></audio>
 							<button class="w3-button w3-circle" id="play" onclick="play()">•—•</button>
 
