--- a/AI.html
+++ b/AI.html
@@ -48,7 +48,7 @@
                   <p>Click Maxwell in the corner to begin.<br>
 									Try phrases such as "I cut my foot" or "I burned my arm"</p>
 
-									The goal is to make first aid knowledge accessible by anyone anywhere, Baymax can also be found by through:
+									The goal is to make first aid knowledge accessible by anyone anywhere, Maxwell can also be found by through:
 									<br> Phone: 415-570-9351
 									<br>Google Assistant
 
@@ -69,12 +69,7 @@
 </script>
 								</div>
 
-                  <!-- <div class="features">
-                    <iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/Baymax">
+                  
 </iframe> -->
 <br><br><br>
 
