--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<div class="inner">
 							<h2>Save A Life</h2>
 							<p>OPERATION Maxwell</p>
-							<audio src="bmv.mp3" id="audio"></audio>
-							<button class="w3-button w3-circle" id="play" onclick="play()">•—•</button>
+							<!-- <audio src="bmv.mp3" id="audio"></audio>
+							<button class="w3-button w3-circle" id="play" onclick="play()">•—•</button> -->
 
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
