buy me coffee plz

--- a/AI.html
+++ b/AI.html
@@ -90,6 +90,7 @@
 							<li><a href="https://www.instagram.com/brenna_nieva/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.linkedin.com/in/brennanieva/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="http://www.brennanieva.me" class="icon fa-bookmark-o"><span class="label">Website</span></a></li>
+							<li><a href="https://www.buymeacoffee.com/BrennaNieva" class="icon fa-coffee"><span class="label">Turn Caffeine into Code!</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Brenna Nieva 2019</a></li>
