--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="firstaid.html">First Aid</a></li>
 											<li><a href="AI.html">Maxwell</a></li>
+                      <li><a href="contact.html">Contact</a></li>
 
 										</ul>
 
@@ -69,7 +70,7 @@
 							<header class="major">
 								<h2>Lets Save the World</h2><br><br>
 								<b>Here's the Problem</b>
-								<p> <br><br> Accourding to the National Security Council in 2018, A preventable-injury-related death occurs every 3 minutes in the United States. On average, this means there are 19 deaths and 5,390 medically consulted injuries every hour.  <br> <br><br> Red Cross Poll reports that 5% of adults are confident in their first aid skiils.</p>
+								<p> <br><br> According to the National Security Council in 2018, A preventable-injury-related death occurs every 3 minutes in the United States. On average, this means there are 19 deaths and 5,390 medically consulted injuries every hour.  <br> <br><br> Red Cross Poll reports that 5% of adults are confident in their first aid skiils.</p>
 
 								<br><Br><br>
 									<b>Lets Fix That</b> <br><br>
