--- a/contact.html
+++ b/contact.html
@@ -79,32 +79,19 @@
         }, 1);
     });
 </script>
-                    <!-- <form id="contact" action="mailto:maxwell.savealifeproject@gmail.com" enctype="text/plain" method="post">
-                      <h3>Contact Us</h3>
-                      <h4>or can be reached at maxwell.savealifeproject@gmail.com</h4>
-                      <fieldset>
-                        <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-                      </fieldset>
-                      <fieldset>
-                        <input placeholder="Your Email Address" type="email" tabindex="2" required>
-                      </fieldset>
 
-                      <fieldset>
-                        <textarea placeholder="Subject & Message ...." tabindex="5" required></textarea>
-                      </fieldset><br><br>
-                      <fieldset>
-                        <button name="Create Email" type="create" id="contact-submit" data-submit="...Sending">Create Email</button>
-                      </fieldset>
-                    </form> -->
 
 
                   </div>
 								</section>
 
+<div center>
+<p> Created by Brenna Nieva &copy; 2019</p>
+<style>.bmc-button img{width: 27px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{line-height: 36px !important;height:37px !important;text-decoration: none !important;display:inline-flex !important;color:#ffffff !important;background-color:rgba(144, 144, 144, 0.5) !important;border-radius: 3px !important;border: 1px solid transparent !important;padding: 0px 9px !important;font-size: 17px !important;letter-spacing:-0.08px !important;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Lato', sans-serif !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;-o-transition: 0.3s all linear !important;-webkit-transition: 0.3s all linear !important;-moz-transition: 0.3s all linear !important;-ms-transition: 0.3s all linear !important;transition: 0.3s all linear !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#ffffff !important;}</style><link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/BrennaNieva"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Turn Caffeine into Code"><span style="margin-left:5px">Turn Caffeine into Code</span></a>
 
 
-
-
+</div>
+<br>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
