burned logo test

--- a/AI.html
+++ b/AI.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/xlogo.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/xlogo_burned.png"/>
 
 
 
@@ -38,7 +38,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Meet Maxwell</h2>
+							<h2>Meet Ma<img src = "images/xlogo_burned.png" width="25" height="25"
+	 alt = "Maxwell Logo"/>well</h2>
 							<p>Your Healthcare Assistant</p>
 						</header>
 						<section class="wrapper style5">
@@ -94,7 +95,7 @@
 							<li><a href="https://www.buymeacoffee.com/BrennaNieva" class="icon fa-coffee"><span class="label">Turn Caffeine into Code!</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Brenna Nieva 2019</a></li>
+							<li>     &copy; Brenna Nieva 2019</a></li>
 						</ul>
 					</footer>
 
