--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="shortcut icon" type="image/png" href="images/xlogo.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/xlogo_burned.png"/>
 
 		<!-- <script>
     function play() {
@@ -43,10 +43,15 @@
                       <li><a href="contact.html">Contact</a></li>
 
 										</ul>
+										<BR><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+										Ma<img src = "images/xlogo_burned.png" width="20" height="20"
+         alt = "Maxwell Logo"/>well
 
 									</div>
 								</li>
 							</ul>
+
+
 						</nav>
 					</header>
 
