--- a/AI.html
+++ b/AI.html
@@ -52,7 +52,7 @@
 
 									The goal is to make first aid knowledge accessible by anyone anywhere, Maxwell can also be found by through:
 									<br> Phone: 415-570-9351
-									<br>Google Assistant
+									<br>Google Assistant by searching "Maxwell AI"
 
 
 
@@ -78,7 +78,7 @@
 
 </div> <br><Br>
 <div class="text-muted" style = "text-align:center;" style="color:grey;">
-<p> DISCLAIMED: Maxwell is an AI trained to respond with the Red Cross Organization's recommended steps to treat an injury. <br>  <b>If injury is severe,  always contact emergency services</b></p></div>
+<p> DISCLAIMER: Maxwell is an AI trained to respond with the Red Cross Organization's recommended steps to treat an injury. <br>  <b>If injury is severe,  always contact emergency services</b></p></div>
 								</section>
 
 
