--- a/AI.html
+++ b/AI.html
@@ -38,7 +38,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Meet Ma<img src = "images/xlogo_burned.png" width="25" height="25"
+							<h2>Meet Ma<img src = "images/maXwellBurned.png" width="25" height="25"
 	 alt = "Maxwell Logo"/>well</h2>
 							<p>Your Healthcare Assistant</p>
 						</header>
