update logo burn

--- a/AI.html
+++ b/AI.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/maXwellBurned.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/XBurn.png"/>
 
 
 
@@ -38,7 +38,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Meet Ma<img src = "images/maXwellBurned.png" width="25" height="25"
+							<h2>Meet Ma<img src = "images/XBurn.png" width="25" height="25"
 	 alt = "Maxwell Logo"/>well</h2>
 							<p>Your Healthcare Assistant</p>
 						</header>
