--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/xlogo.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/XBurn.png"/>
 
 
 
