logo upload and sticker link

--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
 									<b>Lets Fix That</b> <br><br>
 									<p>The fact is there's a first aid knowledge gap.  It doesnt take a superhero to save the world.  Taking the time to learn what to do in emergency puts you and everyone around you less at risk. <br><br><br><br> Spread the word & Save a Life</p>
 							</header>
+								<form action="https://teespring.com/savealifeproject2019" method="get" target="_blank">
+									<button type="submit">Stickers</button>
+
 
 						</div>
+
 					</section>
 
 
