Updates page added

--- a/firstaid.html
+++ b/firstaid.html
@@ -26,6 +26,7 @@
 										<li><a href="index.html">Home</a></li>
 										<li><a href="firstaid.html">First Aid</a></li>
 										<li><a href="AI.html">Maxwell</a></li>
+										<li><a href="updates.html">Updates</a></li>
 										<li><a href="contact.html">Contact</a></li>
 									</ul>
 								</div>
